@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-16T16:17:12Z",
-  "count" : 13,
-  "count_minmax" : [ 5, 13 ],
+  "timestamp" : "2022-04-30T08:15:56Z",
+  "count" : 4,
+  "count_minmax" : [ 4, 13 ],
   "count_prev_day_inc" : 13,
   "count_prev_day_dec" : 0,
-  "uniques" : 7,
-  "uniques_minmax" : [ 4, 7 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 7 ],
   "uniques_prev_day_inc" : 7,
   "uniques_prev_day_dec" : 0
 }
