@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-04-26T01:05:52Z",
+  "timestamp" : "2022-04-30T08:15:56Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 17,
-  "uniques" : 11,
+  "count" : 8,
+  "uniques" : 7,
   "clones" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 13,
-      "count_minmax": [ 5, 13 ],
-      "uniques": 7,
-      "uniques_minmax": [ 4, 7 ]
+      "count": 4,
+      "count_minmax": [ 4, 13 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 7 ]
     },
     {
       "timestamp": "2022-04-17T00:00:00Z",
