@@ -1,11 +1,11 @@
 {
-  "count": 17,
-  "uniques": 9,
+  "count": 8,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 13,
-      "uniques": 7
+      "count": 4,
+      "uniques": 3
     },
     {
       "timestamp": "2022-04-17T00:00:00Z",
